--- a/index.html
+++ b/index.html
@@ -1,129 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home-work-02</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <header class="page-header">
-        <!-- Шапка -->
-        <nav>
-             <div class="logo">
-             <a href="index.html"> <span class="name-logo">Web</span>Studio </a>
-             </div>
-             <ul class="nav-list">
-                 <li> <a href=""> <span class="name-logo">Студия</span></a></li>
-                 <li> <a href="./portfolio.html"> Портфолио </a></li>
-                 <li> <a href=""> Контакты </a></li>
-             </ul>
-        </nav>
-        <ul class="nav-contacts">
-            <li> <a href="mailto:info@devstudio.com"> <span class="name-logo">info@devstudio.com</span></a></li>
-            <li> <a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-        </ul>   
-    </header>
-    <main> 
-        <!-- Герой -->
-        <section class="page-hero"> 
-            <h1 class="motto"> Эффективные решения для вашего бизнеса </h1>
-            <p> 
-                <a href="mailto:info@devstudio.com"> 
-                    <button class="button-motto-bg"> 
-                        <span class="button-motto">Заказать услугу</span>
-                    </button> 
-                </a> 
-            </p>
-        </section>
-        <!-- Особенности -->
-        <section class="features">
-            <!-- <h2> Особености </h2> -->
-            <ul>
-                <li class="features-1">
-                    <h3 class="heading-features">Внимание к деталям</h3>
-                    <p class="paragraph-features">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="features-2">
-                    <h3 class="heading-features">Пунктуальность</h3>
-                    <p class="paragraph-features">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li class="features-3">
-                    <h3 class="heading-features">Планирование</h3>
-                    <p class="paragraph-features">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="features-4">
-                    <h3 class="heading-features">Современные технологии</h3>
-                    <p class="paragraph-features">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <!-- Чем мы занимаемся -->
-        <section class="what-are-we-doing">
-            <h2 class="heading-what-are-we-doing"> Чем мы занимаемся </h2>
-            <ul>
-                <li>
-                <img src="./images/box-1.jpg" alt="box 1" width="370px" height="294px">
-                </li>
-                <li>
-                    <img src="./images/box-2.jpg" alt="box 2" width="370px" height="294px">
-                </li>
-                <li>
-                    <img src="./images/box-3.jpg" alt="box 3" width="370px" height="294px">
-                </li>
-                </ul>
-        </section>
-        <!-- Наша команда -->
-        <section class="our-team">
-            <h2 class="heading-our-team"> Наша команда </h2>
-            <ul>
-                <!-- team card 1-->
-                <li class="card-1">
-                    <img src="./images/team-foto-1.jpg" alt="Игорь Демьяненко" width="270px" height="260px">
-                    <h3 class="headign-team">Игорь Демьяненко</h3>
-                    <p class="paragraph-team">Product Designer</p>
-                </li>
-                <!-- team card 2-->
-                <li class="card-2">
-                    <img src="./images/team-foto-2.jpg" alt="Ольга Репина" width="270px" height="260px">
-                    <h3 class="headign-team">Ольга Репина</h3>
-                    <p class="paragraph-team">Frontend Developer</p>
-                </li>
-                <!-- team card 3-->
-                <li class="card-3">
-                    <img src="./images/team-foto-3.jpg" alt="box 3" width="270px" height="260px">
-                    <h3 class="headign-team">Николай Тарасов</h3>
-                    <p class="paragraph-team">Marketing</p>
-                </li>
-                <!-- team card 4-->
-                <li class="card-4">
-                    <img src="./images/team-foto-4.jpg" alt="box 3" width="270px" height="260px">
-                    <h3 class="headign-team">Михаил Ермаков</h3>
-                    <p class="paragraph-team">UI Designer</p>
-                </li>
-            </ul>
-        </section>
-         </main>
+<body class="page">
 
-         <!-- Подвал -->
-    <footer class="footer">
-        <div class="logo">
-            <a href="index.html"> 
-                <span class="name-logo-footer-1">Web</span><span class="name-logo-footer-2">Studio</span>
+    <!-- Верхняя линия -->
+
+    <header>
+        <nav>
+            <a href="./index.html" class="logo">
+                <span class="web">Web</span>Studio
             </a>
-        </div>
-        <div class="address">
-        <address>
-        <ul class="navigation">
-            <li> <a href=""> <span class="location">г. Киев, пр-т Леси Украинки, 26</span></a></li>
-            <li> <a href="mailto:info@devstudio.com"> <span class="email">info@devstudio.com</span></a></li>
-            <li> <a href="tel:+380961111111"> <span class="phone-number">+38 096 111 11 11</span></a> </li>
+            <ul class="site-nav list">
+                <li><a href=""class="link">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
+                <li><a href="" >Контакты</a></li>
+            </ul>
+        </nav>
+        <ul class="auth-nav list">
+            <li> <a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+            <li> <a href="tel:+38-096-111-11-11"> +38 096 111 11 11 </a></li>
         </ul>
-        </address>
-        </div>
-    
+    </header>
+    <main>
+
+        <!-- Шапка -->
+
+        <section class="section">
+            <h1 class="section-title">Эффективные решения <br> для вашего бизнеса</h1>
+            <a href="button" class="button">Заказать услугу</a>
+        </section>
+
+        <!-- Особенности -->
+
+        <section class="section">
+            <ul>
+                <li>
+                    <h2 class="section-title">Внимание к деталям</h2>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h2 class="section-title">Пунктуальность</h2>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h2 class="section-title">Планирование</h2>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h2 class="section-title">Современные технологии</h2>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Чем мы заимаемся -->
+
+        <section class="section">
+            <h2 class="section-title"> Чем мы заимаемся </h2>
+            <ul>
+                <li><img src="./images/box-1.jpg" alt="box-1" width="370" height="294"></li>
+                <li><img src="./images/box-2.jpg" alt="box-2" width="370" height="294"></li>
+                <li><img src="./images/box-3.jpg" alt="box-3" width="370" height="294"></li>
+            </ul>
+        </section>
+        
+        <!-- Наша Команда -->
+
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="team-list">
+                <li>
+                    <img src="./images/team-foto-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                    <h3 class="title">Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team-foto-2.jpg" alt="Ольга Репина" width="270" height="260">
+                    <h3 class="title">Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team-foto-3.jpg" alt="Николай Тарасов" width="270" height="260">
+                    <h3 class="title">Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team-foto-4.jpg" alt="Михаил Ермаков" width="270" height="260">
+                    <h3 class="title">Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <!-- Подвал -->
+
+    <footer>
+        <nav>
+            <a href="./index.html" class="logo">
+                <span class="web">Web</span>Studio
+            </a>
+        </nav>
+        <ul>
+            <li><a href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+38-096-111-11-11">+38 096 111 11 11</a></li>
+        </ul>
     </footer>
 </body>
 </html>
