--- a/portfolio.html
+++ b/portfolio.html
@@ -3,157 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
+    <title>home-work-2</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <!-- Портфолио -->
-    <header class="page-header">
-        <!-- Шапка -->
-        <nav>
-            <div class="logo">
-                <a href="index.html"> <span class="name-logo">Web</span>Studio </a>
-            </div>
-            <ul class="nav-list">
-                <li> <a href="./index.html"> <span class="name-logo">Студия</span></a></li>
-                <li> <a href=""> Портфолио </a></li>
-                <li> <a href=""> Контакты </a></li>
-            </ul>
-        </nav>
-        <ul class="nav-contacts">
-            <li> <a href="mailto:info@devstudio.com"> <span class="name-logo">info@devstudio.com</span></a></li>
-            <li> <a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+<!-- Верхняя линия -->
+
+<header>
+    <nav>
+        <a href="./index.html" class="logo">
+            <span class="web">Web</span>Studio
+        </a>
+        <ul class="site-nav list">
+            <li><a href="./index.html">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
         </ul>
-    </header>
-    <main>
-        <!-- Фильтри -->
-        <section class="filters">
-            <ul>
-                <!-- Фильтр 1-->
-                <li>
-                    <button type="button" class="button-filter-1">
-                        <span class="filter-1">Все</span>
-                    </button>
-                </li>
-                <!-- Фильтр 2-->
-                <li>
-                    <button type="button">
-                        <span class="filter-2">Веб-сайты</span>
-                    </button>
-                </li>
-                <!-- Фильтр 3-->
-                <li class="filter-3">
-                    <button type="button">
-                        <span class="filter-3">Приложения</span>
-                    </button>
-                </li>
-                <!-- Фильтр 4-->
-                <li class="filter-4">
-                    <button type="button">
-                        <span class="filter-4">Дизайн</span>
-                    </button>
-                </li>
-                <!-- Фильтр 5-->
-                <li class="filter-5">
-                    <button type="button">
-                        <span class="filter-5">Маркетинг</span>
-                    </button>
-                </li>
-            </ul>
-        </section>
-        <!-- Проэкты -->
-        <ul class="project">
-            <!-- Проэкт 1-->
-            <li class="project-1">
-                <a href="">
-                    <img src="./images/project-1.jpg" alt="project-1" width="370px" height="294px">
-                    <h3 class="heading-project">Технокряк</h3>
-                    <p class="paragraph-project">Веб-сайт</p>
-                </a>
+    </nav>
+    <ul class="auth-nav list">
+        <li> <a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+        <li> <a href="tel:+38-096-111-11-11"> +38 096 111 11 11 </a></li>
+    </ul>
+</header>
+<main>
+
+    <!-- Фильтр -->
+
+    <section>
+        <ul>
+            <li><a href="button" class="button">Все</a></li>
+            <li><a href="button" class="button-link">Веб-сайты</a></li>
+            <li><a href="button" class="button-link">Приложения</a></li>
+            <li><a href="button" class="button-link">Дизайн</a></li>
+            <li><a href="button" class="button-link">Маркетинг</a></li>
+            
+        </ul>
+    </section>
+
+    <!-- Нашы Проэкты -->
+
+    <section class="section"> 
+        <!-- <h1>Нашы Проэкты</h1> -->
+        <ul>
+            <li>
+                <img src="./images/project-1.jpg" alt="Технокряк" width="370" height="294">
+                <h2 class="section-title">Технокряк</h2>
+                <p>Веб-сайт</p>
             </li>
-            <!-- Проэкт 2-->
-            <li class="project-2">
-                <a href="">
-                    <img src="./images/project-2.jpg" alt="project-2" width="370px" height="294px">
-                    <h3 class="heading-project">Постер New Orlean vs Golden Star</h3>
-                    <p class="paragraph-project">Дизайн</p>
-                </a>
+            <li>
+                <img src="./images/project-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
             </li>
-            <!-- Проэкт 3-->
-            <li class="project-3">
-                <a href="">
-                    <img src="./images/project-3.jpg" alt="project-3" width="370px" height="294px">
-                    <h3 class="heading-project">Ресторан Seafood</h3>
-                    <p class="paragraph-project">Приложение</p>
-                </a>
+            <li>
+                <img src="./images/project-3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                <h2 class="section-title">Ресторан Seafood</h2>
+                <p>Приложение</p>
             </li>
-            <!-- Проэкт 4-->
-            <li class="project-4">
-                <a href="">
-                    <img src="./images/project-4.jpg" alt="project-4" width="370px" height="294px">
-                    <h3 class="heading-project">Проект Prime</h3>
-                    <p class="paragraph-project">Маркетинг</p>
-                </a>
+            <li>
+                <img src="./images/project-4.jpg" alt="Проект Prime" width="370" height="294">
+                <h2 class="section-title">Проект Prime</h2>
+                <p>Маркетинг</p>
             </li>
-            <!-- Проэкт 5-->
-            <li class="project-4">
-                <a href="">
-                    <img src="./images/project-5.jpg" alt="project-5" width="370px" height="294px">
-                    <h3 class="heading-project">Проект Boxes</h3>
-                    <p class="paragraph-project">Приложение</p>
-                </a>
+            <li>
+                <img src="./images/project-5.jpg" alt="Проект Boxes" width="370" height="294">
+                <h2 class="section-title">Проект Boxes</h2>
+                <p>Приложение</p>
             </li>
-            <!-- Проэкт 6-->
-            <li class="project-6">
-                <a href="">
-                    <img src="./images/project-6.jpg" alt="project-6" width="370px" height="294px">
-                    <h3 class="heading-project">Inspiration has no Borders</h3>
-                    <p class="paragraph-project">Веб-сайт</p>
-                </a>
+            <li>
+                <img src="./images/project-6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                <h2 class="section-title">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
             </li>
-            <!-- Проэкт 7-->
-            <li class="project-7">
-                <a href="">
-                    <img src="./images/project-7.jpg" alt="project-7" width="370px" height="294px">
-                    <h3 class="heading-project">Издание Limited Edition</h3>
-                    <p class="paragraph-project">Дизайн</p>
-                </a>
+            <li>
+                <img src="./images/project-7.jpg" alt="Издание Limited Edition" width="370" height="294">
+                <h2 class="section-title">Издание Limited Edition</h2>
+                <p>Дизайн</p>
             </li>
-            <!-- Проэкт 8-->
-            <li class="project-8">
-                <a href="">
-                    <img src="./images/project-8.jpg" alt="project-8" width="370px" height="294px">
-                    <h3 class="heading-project">Проект LAB</h3>
-                    <p class="paragraph-project">Маркетинг</p>
-                </a>
+            <li>
+                <img src="./images/project-8.jpg" alt="Проект LAB" width="370" height="294">
+                <h2 class="section-title">Проект LAB</h2>
+                <p>Маркетинг</p>
             </li>
-            <!-- Проэкт 9-->
-            <li class="project-9">
-                <a href="">
-                    <img src="./images/project-9.jpg" alt="project-9" width="370px" height="294px">
-                    <h3 class="heading-project">Growing Business</h3>
-                    <p class="paragraph-project">Приложение</p>
-                </a>
+            <li>
+                <img src="./images/project-9.jpg" alt="Growing Business" width="370" height="294">
+                <h2 class="section-title">Growing Business</h2>
+                <p>Приложение</p>
             </li>
         </ul>
-    </main>
-    <footer class="footer">
-        <div class="logo">
-            <a href="index.html">
-                <span class="name-logo-footer-1">Web</span><span class="name-logo-footer-2">Studio</span>
-            </a>
-        </div>
-        <div class="address">
-            <address>
-                <ul class="navigation">
-                    <li> <a href=""> <span class="location">г. Киев, пр-т Леси Украинки, 26</span></a></li>
-                    <li> <a href="mailto:info@devstudio.com"> <span class="email">info@devstudio.com</span></a></li>
-                    <li> <a href="tel:+380961111111"> <span class="phone-number">+38 096 111 11 11</span></a> </li>
-                </ul>
-            </address>
-        </div>
-    </footer>
+    </section>
+</main>
+
+<!-- Подвал -->
+
+<footer>
+    <nav>
+        <a href="./index.html" class="logo">
+            <span class="web">Web</span>Studio
+        </a>
+    </nav>
+    <ul>
+        <li><a
+                href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">г.
+                Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38-096-111-11-11">+38 096 111 11 11</a></li>
+    </ul>
+</footer>
 </body>
 </html>
