--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="page">
@@ -30,30 +33,32 @@
 
         <!-- Шапка -->
 
-        <section class="section">
-            <h1 class="section-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <a href="button" class="button primary">Заказать услугу</a>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+            <a href="button" class="button hero">Заказать услугу</a>
         </section>
+        
 
         <!-- Особенности -->
 
         <section class="section">
-            <ul>
+            <!-- <h2> Особенности </h2> -->
+            <ul class="features">
                 <li>
-                    <h2 class="section-title">Внимание к деталям</h2>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="features-title">Внимание к деталям</h3>
+                    <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2 class="section-title">Пунктуальность</h2>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="features-title">Пунктуальность</h3>
+                    <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h2 class="section-title">Планирование</h2>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="features-title">Планирование</h3>
+                    <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h2 class="section-title">Современные технологии</h2>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="features-title">Современные технологии</h3>
+                    <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -61,7 +66,7 @@
         <!-- Чем мы заимаемся -->
 
         <section class="section">
-            <h2 class="section-title"> Чем мы заимаемся </h2>
+            <h2 class="section-title"> Чем мы занимаемся </h2>
             <ul>
                 <li><img src="./images/box-1.jpg" alt="box-1" width="370" height="294"></li>
                 <li><img src="./images/box-2.jpg" alt="box-2" width="370" height="294"></li>
@@ -73,26 +78,26 @@
 
         <section class="section">
             <h2 class="section-title">Наша команда</h2>
-            <ul class="team-list">
+            <ul class="team">
                 <li>
                     <img src="./images/team-foto-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                    <h3 class="title">Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-title">Игорь Демьяненко</h3>
+                    <p class="team-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team-foto-2.jpg" alt="Ольга Репина" width="270" height="260">
-                    <h3 class="title">Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-title">Ольга Репина</h3>
+                    <p class="team-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team-foto-3.jpg" alt="Николай Тарасов" width="270" height="260">
-                    <h3 class="title">Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-title">Николай Тарасов</h3>
+                    <p class="team-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team-foto-4.jpg" alt="Михаил Ермаков" width="270" height="260">
-                    <h3 class="title">Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-title">Михаил Ермаков</h3>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -100,19 +105,18 @@
 
     <!-- Подвал -->
 
-    <footer>
+    <footer class="footer">
         <div>
         <nav>
-            <a href="./index.html">
-                <span class="web-footer">Web</span> <span class="studio-footer">Studio</span>
+            <a href="./index.html" class="logo">
+                <span class="web-footer">Web</span><span class="studio-footer">Studio</span>
             </a>
         </nav>
         <ul class="auth-nav list">
             <li><a href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
-                    class="link">г.
-                    Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+38-096-111-11-11" class="link">+38 096 111 11 11</a></li>
+                    class="location link">г.Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="footer-contacts link"> info@devstudio.com</a></li>
+            <li><a href="tel:+38-096-111-11-11" class="footer-contacts link">+38 096 111 11 11</a></li>
         </ul>
         </div>
     </footer>
