--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -31,64 +34,64 @@
 
     <section>
         <ul>
-            <li><a href="button" class="button primary">Все</a></li>
-            <li><a href="button" class="button secondary">Веб-сайты</a></li>
-            <li><a href="button" class="button secondary">Приложения</a></li>
-            <li><a href="button" class="button secondary">Дизайн</a></li>
-            <li><a href="button" class="button secondary">Маркетинг</a></li>
+            <li><a href="button" class="button">Все</a></li>
+            <li><a href="button" class="button">Веб-сайты</a></li>
+            <li><a href="button" class="button">Приложения</a></li>
+            <li><a href="button" class="button">Дизайн</a></li>
+            <li><a href="button" class="button">Маркетинг</a></li>
             
         </ul>
     </section>
 
     <!-- Нашы Проэкты -->
 
-    <section class="section"> 
+    <section class="project"> 
         <!-- <h1>Нашы Проэкты</h1> -->
         <ul>
             <li>
                 <img src="./images/project-1.jpg" alt="Технокряк" width="370" height="294">
-                <h2 class="section-title">Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h3 class="project-title">Технокряк</h3>
+                <p class="project-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/project-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h3 class="project-title">Постер New Orlean vs Golden Star</h3>
+                <p class="project-text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/project-3.jpg" alt="Ресторан Seafood" width="370" height="294">
-                <h2 class="section-title">Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h3 class="project-title">Ресторан Seafood</h3>
+                <p class="project-text">Приложение</p>
             </li>
             <li>
                 <img src="./images/project-4.jpg" alt="Проект Prime" width="370" height="294">
-                <h2 class="section-title">Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h3 class="project-title">Проект Prime</h3>
+                <p class="project-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/project-5.jpg" alt="Проект Boxes" width="370" height="294">
-                <h2 class="section-title">Проект Boxes</h2>
-                <p>Приложение</p>
+                <h3 class="project-title">Проект Boxes</h3>
+                <p class="project-text">Приложение</p>
             </li>
             <li>
                 <img src="./images/project-6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                <h2 class="section-title">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h3 class="project-title">Inspiration has no Borders</h3>
+                <p class="project-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/project-7.jpg" alt="Издание Limited Edition" width="370" height="294">
-                <h2 class="section-title">Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h3 class="project-title">Издание Limited Edition</h3>
+                <p class="project-text">Дизайн</p>
             </li>
             <li>
                 <img src="./images/project-8.jpg" alt="Проект LAB" width="370" height="294">
-                <h2 class="section-title">Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h3 class="project-title">Проект LAB</h3>
+                <p class="project-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/project-9.jpg" alt="Growing Business" width="370" height="294">
-                <h2 class="section-title">Growing Business</h2>
-                <p>Приложение</p>
+                <h3 class="project-title">Growing Business</h3>
+                <p class="project-text">Приложение</p>
             </li>
         </ul>
     </section>
@@ -96,19 +99,18 @@
 
 <!-- Подвал -->
 
-<footer>
+<footer class="footer">
     <div>
         <nav>
-            <a href="./index.html">
-                <span class="web-footer">Web</span> <span class="studio-footer">Studio</span>
+            <a href="./index.html" class="logo">
+                <span class="web-footer">Web</span><span class="studio-footer">Studio</span>
             </a>
         </nav>
         <ul class="auth-nav list">
             <li><a href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
-                    class="link">г.
-                    Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+38-096-111-11-11" class="link">+38 096 111 11 11</a></li>
+                    class="location link">г.Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="footer-contacts link"> info@devstudio.com</a></li>
+            <li><a href="tel:+38-096-111-11-11" class="footer-contacts link">+38 096 111 11 11</a></li>
         </ul>
     </div>
 </footer>
